# TDA_EVE_Simu

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcop_peak_detection_kernel.k  vcop_peak_detection_tb.cpp
data/raw_data_process/: main.py  make_win_data.py
kernel/: vcop_dcoffset_windowing_kernel.k  vcop_peak_detection_kernel.k
kernel/fft/: vcop_fft_1024_16ix16o_kernel.k  vcop_fft_1024_16ix16o_kernel_overflow.k  vcop_fft_128_16ix16o_32inter_kernel.k  vcop_fft_128_16ix16o_kernel.k  vcop_fft_128_16ix16o_kernel_overflow.k  vcop_fft_256_16ix16o_32inter_kernel.k  vcop_fft_256_16ix16o_kernel.k  vcop_fft_256_16ix16o_kernel_overflow.k  vcop_fft_256_16ix32o_kernel.k  vcop_fft_512_16ix16o_32inter_kernel.k  vcop_fft_512_16ix16o_kernel.k  vcop_fft_512_16ix16o_kernel_overflow.k  vcop_fft_64_16ix16o_32inter_kernel.k  vcop_fft_64_16ix16o_kernel.k  vcop_fft_64_16ix16o_kernel_overflow.k  vcop_fft_doppler_correction_kernel.k  vcop_fft_npt_16ix16o_32inter_wrapper.cpp  vcop_fft_npt_16ix16o_gen_twiddleFactor.cpp  vcop_fft_npt_16ix16o_wrapper.cpp  vcop_fft_utils.k
kernel/fft/inc/: vcop_fft_doppler_correction_kernel.h  vcop_fft_npt_16ix16o_32inter_cn.h  vcop_fft_npt_16ix16o_32inter_wrapper.h  vcop_fft_npt_16ix16o_cn.h  vcop_fft_npt_16ix16o_gen_twiddleFactor.h  vcop_fft_npt_16ix16o_wrapper.h
ti/: configparser.cpp  configparser.h  libeveprivnatckernels.eve.lib_pc.lib  ti_file_io.c  ti_file_io.h  ti_file_io_msg.h  vcop_peak_detection_cn.h  vcop_peak_detection_config.c  vcop_peak_detection_config.h  vcop_peak_detection_tb.cpp
vcop/: file_io.cpp  file_io.h  vcop.h  vcopmem.cpp  vcopmem.h
